ajout h1 paycard.html

--- a/paycard.html
+++ b/paycard.html
@@ -31,7 +31,9 @@
     </nav>
 </header>
 <main class="page-index">
-    Ajouter le contenu du document _sources/Paycard.docx
+
+    <h1>Facture Paycard</h1>
+
 </main>
 </body>
 </html>
