ajout p et strong paycard.html

--- a/paycard.html
+++ b/paycard.html
@@ -34,6 +34,10 @@
 
     <h1>Facture Paycard</h1>
 
+    <p>La facturation de votre commande en ligne/achat en magasin est effectuée par
+     <strong> la société Paycard.</strong>Vous recevez votre facture
+     <strong> les 10 jours ouvrables</strong> dans le courant du mois suivant.</p>
+
 </main>
 </body>
 </html>
