ajout images dans figcaption

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 <body>
 <header>
     <img src="img/logo-fust.png"
-         alt="Logo FUST"
-    >
+         alt="Logo FUST">
     <nav>
         <ul>
             <li><a class="actif" href="index.html">Nos produits</a></li>
@@ -37,6 +36,7 @@
             <figure>
                 <figcaption>
                     <h2>BOSCH SPV2HKX39E</h2>
+                    <img src="img/bosh-spv2hkx39e.jpg" alt="image lave vaisselle Bosch">
                     <div><strong>Classe énergétique:</strong> E</div>
                     <div><strong>Prix:</strong> 669 CHF</div>
                 </figcaption>
@@ -45,6 +45,7 @@
         <li>
             <figure>
                 <figcaption>
+                    <img src="img/electrolux-ga60glv.jpg" alt=" image Electrolux">
                     <h2>ELECTROLUX GA60GLV</h2>
                     <div><strong>Classe énergétique:</strong> C</div>
                     <div><strong>Prix:</strong> 1'049 CHF</div>
@@ -54,6 +55,7 @@
         <li>
             <figure>
                 <figcaption>
+                    <img src="img/miele-g-27695-60.jpg" alt=" image Miele">
                     <h2>MIELE G 27695-60 SCVi XXL</h2>
                     <div><strong>Classe énergétique:</strong> A</div>
                     <div><strong>Prix:</strong> 1945 CHF</div>
@@ -63,6 +65,7 @@
         <li>
             <figure>
                 <figcaption>
+                    <img src="img/sharp-qw-ni14.jpg" alt="photo Sharp">
                     <h2>SHARP QW-NI14I47EX-DE</h2>
                     <div><strong>Classe énergétique:</strong> E</div>
                     <div><strong>Prix:</strong> 459 CHF</div>
@@ -72,6 +75,7 @@
         <li>
             <figure>
                 <figcaption>
+                    <img src="img/siemens-iq500.jpg" alt="poto Siemens">
                     <h2>SIEMENS iQ500 SN75ZX48CE</h2>
                     <div><strong>Classe énergétique:</strong> C</div>
                     <div><strong>Prix:</strong> 1'129 CHF</div>
